// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NonUqOrgAffiliationFormSection tests  should render component with both values 1`] = `
<WithStyles(ForwardRef(Grid))
  container={true}
  spacing={1}
>
  <WithStyles(ForwardRef(Grid))
    item={true}
    xs={6}
  >
    <WithStyles(ForwardRef(TextField))
      fullWidth={true}
      id="org-affiliation-name"
      label="Organisation"
      onChange={[MockFunction]}
      required={true}
      value="Test"
    />
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    item={true}
    xs={6}
  >
    <WithStyles(ForwardRef(FormControl))
      fullWidth={true}
      required={true}
    >
      <WithStyles(ForwardRef(InputLabel))
        id="org-affiliation-type-label"
      >
        Organisation type
      </WithStyles(ForwardRef(InputLabel))>
      <WithStyles(ForwardRef(Select))
        SelectDisplayProps={
          Object {
            "id": "org-affiliation-type",
          }
        }
        labelId="org-affiliation-type-label"
        name="org-affiliation-type"
        onChange={[MockFunction]}
        value="453987"
      >
        <WithStyles(ForwardRef(MenuItem))
          disabled={true}
        >
          Select an organisation type
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          key="453983"
          value="453983"
        >
          Library/Museum/Public Gallery
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          key="453984"
          value="453984"
        >
          Commercial Gallery
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          key="453985"
          value="453985"
        >
          Government
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          key="453986"
          value="453986"
        >
          NGO
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          key="453987"
          value="453987"
        >
          Foundation
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          key="453988"
          value="453988"
        >
          Corporate/Industry
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          key="453989"
          value="453989"
        >
          University
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          key="453990"
          value="453990"
        >
          Other
        </WithStyles(ForwardRef(MenuItem))>
      </WithStyles(ForwardRef(Select))>
    </WithStyles(ForwardRef(FormControl))>
  </WithStyles(ForwardRef(Grid))>
</WithStyles(ForwardRef(Grid))>
`;

exports[`NonUqOrgAffiliationFormSection tests  should render component with defaults 1`] = `
<WithStyles(ForwardRef(Grid))
  container={true}
  spacing={1}
>
  <WithStyles(ForwardRef(Grid))
    item={true}
    xs={6}
  >
    <WithStyles(ForwardRef(TextField))
      fullWidth={true}
      id="org-affiliation-name"
      label="Organisation"
      onChange={[MockFunction]}
      required={true}
      value=""
    />
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    item={true}
    xs={6}
  >
    <WithStyles(ForwardRef(FormControl))
      fullWidth={true}
      required={true}
    >
      <WithStyles(ForwardRef(InputLabel))
        id="org-affiliation-type-label"
      >
        Organisation type
      </WithStyles(ForwardRef(InputLabel))>
      <WithStyles(ForwardRef(Select))
        SelectDisplayProps={
          Object {
            "id": "org-affiliation-type",
          }
        }
        labelId="org-affiliation-type-label"
        name="org-affiliation-type"
        onChange={[MockFunction]}
        value=""
      >
        <WithStyles(ForwardRef(MenuItem))
          disabled={true}
        >
          Select an organisation type
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          key="453983"
          value="453983"
        >
          Library/Museum/Public Gallery
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          key="453984"
          value="453984"
        >
          Commercial Gallery
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          key="453985"
          value="453985"
        >
          Government
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          key="453986"
          value="453986"
        >
          NGO
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          key="453987"
          value="453987"
        >
          Foundation
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          key="453988"
          value="453988"
        >
          Corporate/Industry
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          key="453989"
          value="453989"
        >
          University
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          key="453990"
          value="453990"
        >
          Other
        </WithStyles(ForwardRef(MenuItem))>
      </WithStyles(ForwardRef(Select))>
    </WithStyles(ForwardRef(FormControl))>
  </WithStyles(ForwardRef(Grid))>
</WithStyles(ForwardRef(Grid))>
`;

exports[`NonUqOrgAffiliationFormSection tests  should render component with organisation affiliation type value 1`] = `
<WithStyles(ForwardRef(Grid))
  container={true}
  spacing={1}
>
  <WithStyles(ForwardRef(Grid))
    item={true}
    xs={6}
  >
    <WithStyles(ForwardRef(TextField))
      fullWidth={true}
      id="org-affiliation-name"
      label="Organisation"
      onChange={[MockFunction]}
      required={true}
      value=""
    />
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    item={true}
    xs={6}
  >
    <WithStyles(ForwardRef(FormControl))
      fullWidth={true}
      required={true}
    >
      <WithStyles(ForwardRef(InputLabel))
        id="org-affiliation-type-label"
      >
        Organisation type
      </WithStyles(ForwardRef(InputLabel))>
      <WithStyles(ForwardRef(Select))
        SelectDisplayProps={
          Object {
            "id": "org-affiliation-type",
          }
        }
        labelId="org-affiliation-type-label"
        name="org-affiliation-type"
        onChange={[MockFunction]}
        value="453987"
      >
        <WithStyles(ForwardRef(MenuItem))
          disabled={true}
        >
          Select an organisation type
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          key="453983"
          value="453983"
        >
          Library/Museum/Public Gallery
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          key="453984"
          value="453984"
        >
          Commercial Gallery
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          key="453985"
          value="453985"
        >
          Government
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          key="453986"
          value="453986"
        >
          NGO
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          key="453987"
          value="453987"
        >
          Foundation
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          key="453988"
          value="453988"
        >
          Corporate/Industry
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          key="453989"
          value="453989"
        >
          University
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          key="453990"
          value="453990"
        >
          Other
        </WithStyles(ForwardRef(MenuItem))>
      </WithStyles(ForwardRef(Select))>
    </WithStyles(ForwardRef(FormControl))>
  </WithStyles(ForwardRef(Grid))>
</WithStyles(ForwardRef(Grid))>
`;

exports[`NonUqOrgAffiliationFormSection tests  should render component with organisation affiliation value 1`] = `
<WithStyles(ForwardRef(Grid))
  container={true}
  spacing={1}
>
  <WithStyles(ForwardRef(Grid))
    item={true}
    xs={6}
  >
    <WithStyles(ForwardRef(TextField))
      fullWidth={true}
      id="org-affiliation-name"
      label="Organisation"
      onChange={[MockFunction]}
      required={true}
      value="Test"
    />
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    item={true}
    xs={6}
  >
    <WithStyles(ForwardRef(FormControl))
      fullWidth={true}
      required={true}
    >
      <WithStyles(ForwardRef(InputLabel))
        id="org-affiliation-type-label"
      >
        Organisation type
      </WithStyles(ForwardRef(InputLabel))>
      <WithStyles(ForwardRef(Select))
        SelectDisplayProps={
          Object {
            "id": "org-affiliation-type",
          }
        }
        labelId="org-affiliation-type-label"
        name="org-affiliation-type"
        onChange={[MockFunction]}
        value=""
      >
        <WithStyles(ForwardRef(MenuItem))
          disabled={true}
        >
          Select an organisation type
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          key="453983"
          value="453983"
        >
          Library/Museum/Public Gallery
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          key="453984"
          value="453984"
        >
          Commercial Gallery
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          key="453985"
          value="453985"
        >
          Government
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          key="453986"
          value="453986"
        >
          NGO
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          key="453987"
          value="453987"
        >
          Foundation
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          key="453988"
          value="453988"
        >
          Corporate/Industry
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          key="453989"
          value="453989"
        >
          University
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          key="453990"
          value="453990"
        >
          Other
        </WithStyles(ForwardRef(MenuItem))>
      </WithStyles(ForwardRef(Select))>
    </WithStyles(ForwardRef(FormControl))>
  </WithStyles(ForwardRef(Grid))>
</WithStyles(ForwardRef(Grid))>
`;

exports[`NonUqOrgAffiliationFormSection tests  should render full width input fields 1`] = `
<WithStyles(ForwardRef(Grid))
  container={true}
  spacing={1}
>
  <WithStyles(ForwardRef(Grid))
    item={true}
    xs={12}
  >
    <WithStyles(ForwardRef(TextField))
      fullWidth={true}
      id="org-affiliation-name"
      label="Organisation"
      onChange={[MockFunction]}
      required={true}
      value="Test"
    />
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    item={true}
    xs={12}
  >
    <WithStyles(ForwardRef(FormControl))
      fullWidth={true}
      required={true}
    >
      <WithStyles(ForwardRef(InputLabel))
        id="org-affiliation-type-label"
      >
        Organisation type
      </WithStyles(ForwardRef(InputLabel))>
      <WithStyles(ForwardRef(Select))
        SelectDisplayProps={
          Object {
            "id": "org-affiliation-type",
          }
        }
        labelId="org-affiliation-type-label"
        name="org-affiliation-type"
        onChange={[MockFunction]}
        value="453987"
      >
        <WithStyles(ForwardRef(MenuItem))
          disabled={true}
        >
          Select an organisation type
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          key="453983"
          value="453983"
        >
          Library/Museum/Public Gallery
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          key="453984"
          value="453984"
        >
          Commercial Gallery
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          key="453985"
          value="453985"
        >
          Government
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          key="453986"
          value="453986"
        >
          NGO
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          key="453987"
          value="453987"
        >
          Foundation
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          key="453988"
          value="453988"
        >
          Corporate/Industry
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          key="453989"
          value="453989"
        >
          University
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          key="453990"
          value="453990"
        >
          Other
        </WithStyles(ForwardRef(MenuItem))>
      </WithStyles(ForwardRef(Select))>
    </WithStyles(ForwardRef(FormControl))>
  </WithStyles(ForwardRef(Grid))>
</WithStyles(ForwardRef(Grid))>
`;
